# esp-wifi-connect-next

./: .component_hash  CMakeLists.txt  README.md  dns_server.cc  idf_component.yml  ssid_manager.cc  ssid_manager_c.cc  wifi_configuration.cc  wifi_configuration_ap.cc  wifi_configuration_ble.cc  wifi_connection_manager.cc  wifi_manager_c.cc  wifi_station.cc
assets/: wifi_configuration_done.html
ble/: adv.c  ble.c  gatt_svr.c
include/: adv.h  ble.h  gatt_svr.h  pack_protocol.h  parse_protocol.h  ssid_manager.h  ssid_manager_c.h  wifi_configuration.h  wifi_configuration_ap.h  wifi_connection_manager.h  wifi_manager_c.h  wifi_station.h
include_ble/: adv.h  esp_peripheral.h  wifi_configuration_ble.h
protocol/: pack_protocol.c  parse_protocol.c
